Fixed alignment issue with photo

--- a/style.css
+++ b/style.css
@@ -120,7 +120,6 @@ div #idbox {
     text-align: left;
     max-width: 650px;
     padding-bottom: 10px;
-    padding-left: 40px;
     font-size: 14pt;
     font-family: 'Titillium Web', 'Lato', sans-serif;
     font-weight: 200;
@@ -128,6 +127,8 @@ div #idbox {
 
 div #photo {
     float: left;
+    margin-right: 40px;
+    margin-bottom: 10px;
 }
 
 #photo img {
